BusOne02/src/objects/Sample_Transaction_Audit_vod__c.object
<CustomObject>
    <description>Sample Transaction Audit is a read-only object maintained by the Sample_Transaction_To_Audit_vod trigger on Sample Transaction that stores audit history of updates and deletions of Sample Transaction records. A row is created here only if a sample transaction has been updated or deleted.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>ASSMCA is the audit representation of the ASSMCA field on the Sample Transaction object.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the audit representation of the Account field on the Sample Transaction object.</description>
        <label>Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_vod__c</fullName>
        <description>Action represents the type of Action performed on the Sample Transaction record that triggered the creation of the Sample Transaction Audit record.  &quot;U&quot; represents Update.  &quot;D&quot; represents Delete.</description>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 is the audit representation of the Address Line 1 field on the Sample Transaction object.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 is the audit representation of the Address Line 2 field on the Sample Transaction object.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjust_For_Name_vod__c</fullName>
        <description>Adjust For Name is the audit representation of the Adjust For Name field on the Sample Transaction object.</description>
        <label>Adjust For Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjust_For_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjust For is the audit representation of the Adjust For field on the Sample Transaction object.</description>
        <label>Adjust For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemKDUAZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjusted_Date_vod__c</fullName>
        <description>Adjusted Date is the audit representation of the Adjusted Date field on the Sample Transaction object.</description>
        <label>Adjusted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the call.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the call address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>Call Date is the audit representation of the Call Date field on the Sample Transaction object.</description>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>Call Datetime is the audit representation of the Call Datetime field on the Sample Transaction object.</description>
        <label>Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Name_vod__c</fullName>
        <description>Call Name is the audit representation of the Call Name field on the Sample Transaction object.</description>
        <label>Call Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City is the audit representation of the City field on the Sample Transaction object.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_Status_vod__c</fullName>
        <description>The Cold Chain Status for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Cold Chain Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Range</fullName>
                </value>
                <value>
                    <fullName>Not In Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>Comments is the audit representation of the Comments field on the Sample Transaction object.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quantity_vod__c</fullName>
        <description>Confirmed Quantity is the audit representation of the Confirmed Quantity field on the Sample Transaction object.</description>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Text_vod__c</fullName>
        <description>Custom text captured for the corresponding product line item. Only pertains to product that have been flagged to allow capture of custom text via the Product Catalog.</description>
        <label>Custom Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA Expiration Date is the audit representation of the DEA Expiratoin Date field on the Sample Transaction object.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>DEA # is the audit representation of the DEA # field on the Sample Transaction object.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursed_To_vod__c</fullName>
        <description>Disbursed To is the audit representation of the Disbursed To field on the Sample Transaction object.</description>
        <label>Disbursed To</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Disclaimer is the audit representation of the Disclaimer field on the Sample Transaction object.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discrepancy_vod__c</fullName>
        <description>Discrepancy is the audit representation of the Discrepancy field on the Sample Transaction object.</description>
        <label>Discrepancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Identifier_vod__c</fullName>
        <description>Group Identifier is the audit representation of the Group Identifier field on the Sample Transaction object.</description>
        <label>Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Transaction_Id_vod__c</fullName>
        <description>Group Transactoin Id vod is the audit representation of the Group Transaction Id vod field on the Sample Transaction object.</description>
        <externalId>true</externalId>
        <label>Group_Transaction_Id_vod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Impact_Quantity_vod__c</fullName>
        <description>Inventory Impact Quantity is the audit representation of the Inventory Impact Quantity field on the Sample Transaction object.</description>
        <label>Inventory Impact Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>The License Expiration Date field stores the Practitioner&apos;s State License Expiration Date that signed for Samples.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>The License Status field stores the current Status of the Practitioner&apos;s State License at the time the Signature was captured for Samples.</description>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>License # is the audit representation of the License # field on the Sample Transaction object.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Name_vod__c</fullName>
        <description>Lot # Name is the audit representation of the Lot # Name field on the Sample Transaction object.</description>
        <label>Lot # Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>Lot # is the audit representation of the Lot # field on the Sample Transaction object.</description>
        <label>Lot #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>The name of the manufacturer of the sampled product</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>Quantity is the audit representation of the Quantity field on the Sample Transaction object.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Reason is the audit representation of the Reason field on the Sample Transaction object.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Comments_vod__c</fullName>
        <description>Receipt Comments is the audit representation of the Receipt Comments field on the Sample Transaction object.</description>
        <label>Receipt Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Received is the audit representation of the Received field on the Sample Transaction object.</description>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Transaction_Id_vod__c</fullName>
        <description>Ref Transaction Id is the audit representation of the Ref Transaction Id field on the Sample Transaction object.</description>
        <label>Ref Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request Receipt is the audit representation of the Request Receipt field on the Sample Transaction object.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_To_vod__c</fullName>
        <description>Return To is the audit representation of the Return To field on the Sample Transaction object.</description>
        <label>Return To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>Sample Card Reason is the audit representation of the Sample Card Reason field on the Sample Transaction object.</description>
        <label>Sample Card Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop Unavailable</fullName>
                </value>
                <value>
                    <fullName>Application Unavailable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Card_vod__c</fullName>
        <description>Sample Card # is the audit representation of the Sample Card # field on the Sample Transaction object.</description>
        <label>Sample Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Sample is the audit representation of the Sample field on the Sample Transaction object.</description>
        <label>Sample</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Id_vod__c</fullName>
        <description>Shipment Id is the audit representation of the Shipment Id field on the Sample Transaction object.</description>
        <label>Shipment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Signature Date is the audit representation of the Signature Date field on the Sample Transaction object.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Signature is the audit representation of the Signature field on the Sample Transaction object.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Expiration_Date_vod__c</fullName>
        <description>The Expiration date of the State Distributor number for the corresponding Call Business Address</description>
        <label>State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Distributor_vod__c</fullName>
        <description>The State Distributor number for the corresponding Call Business Address</description>
        <label>State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State is the audit representation of the State field on the Sample Transaction object.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status is the audit representation of the Status field on the Sample Transaction object.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_vod__c</fullName>
        <description>Submitted Date is the audit representation of the Submitted Date field on the Sample Transaction object.</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tag_Alert_Number_vod__c</fullName>
        <description>The Tag Alert Number for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Tag Alert Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Created_By_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction Created By is the audit representation of the Created By field on the Sample Transaction object.</description>
        <label>Transaction Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemKrUAJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Id_vod__c</fullName>
        <description>Transaction Id is the audit representation of the Transaction Id field on the Sample Transaction object.</description>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Modified_By_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction Modified By is the audit representation of the Modified By field on the Sample Transaction object.</description>
        <label>Transaction Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemJEUAZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Name_vod__c</fullName>
        <description>Transfer To Name is the audit representation of the Transfer To Name field on the Sample Transaction object.</description>
        <label>Transfer To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transfer To is the audit representation of the Transfer To field on the Sample Transaction object.</description>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemJpUAJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_Date_vod__c</fullName>
        <description>Transferred Date is the audit representation of the Transferred Date field on the Sample Transaction object.</description>
        <label>Transferred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_From_Name_vod__c</fullName>
        <description>Transferred From Name is the audit representation of the Transferred From Name field on the Sample Transaction object.</description>
        <label>Transferred From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_From_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transferred From is the audit representation of the Transferred From field on the Sample Transaction object.</description>
        <label>Transferred From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemKcUAJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Type is the audit representation of the Type field on the Sample Transaction object.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M is the audit representation of the U/M field on the Sample Transaction object.</description>
        <label>U/M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unlock is the audit representation of the Unlock field on the Sample Transaction object.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>Zip 4 is the audit representation of the Zip 4 field on the Sample Transaction object.</description>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip is the audit representation of the Zip field on the Sample Transaction object.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Sample Transaction Audit</label>
    <nameField>
        <displayFormat>STA-{000000000}</displayFormat>
        <label>Audit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Transaction Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>